2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar): Cast usize to unsigned long before
	printing it. Changed its format modifier accordingly.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar): Added local read_amt variable.
	Use read_amt to check if the read calls returned an error
	or didn't read the desired number of bytes. Exit if 
	filename allocation fails. Added missing cast to ub1.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar): Changed filename_len to ub2.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (extract_jar): Changed filename_len to ub2.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar): Exit if strftime call fails.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar): Changed i to ub2.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar): Introduced local variable 
	central_header_offset.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Allocate buff dynamically,
	rather than on the stack.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Documented function.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Use tc to report consumed bytes 
	in all cases.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (extract_jar): Use consume instead of pb_read
	to consume unneeded bytes.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (consume): Changed to return void.
	Removed unused return statement.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* compress.c (inflate_file): Removed code handling
	negative return value from pb_read, since it is always
	non-negative.

2007-02-18  Dalibor Topic  <robilad@kaffe.org>

	* pushback.h (pb_read): Added documentation.
	* pushback.c: Added myself to authors.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>
