@@ -1,3 +1,9 @@
+2007-02-28  Dalibor Topic  <robilad@kaffe.org>
+
+	* jartool.c (extract_jar): Exit if write call fails.
+	Added casts.
+	(list_jar) Added casts.
+
 2007-02-18  Dalibor Topic  <robilad@kaffe.org>
 
 	* jartool.c (list_jar): Cast usize to unsigned long before
